Fix navbar on smaller mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,7 @@ body {
     .nav-align {
       width: auto;
       padding: .75rem;
+      font-size: .75rem;
     }
 }
 
